--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Cheatsheet/Bitbucket.md",
-            "mode": "preview",
+            "file": "Platform/macOS.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Cheatsheet/Bitbucket.md",
+                "file": "Platform/macOS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Cheatsheet/Bitbucket.md",
+                "file": "Platform/macOS.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,11 +117,20 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Cheatsheet/Bitbucket.md"
+                "file": "Platform/macOS.md"
               }
             }
+          },
+          {
+            "id": "30c4fdc1fc0cbbc4",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
@@ -130,15 +139,15 @@
   },
   "active": "d84d5f56dbd8d5cc",
   "lastOpenFiles": [
-    "Cheatsheet/Linux.md",
-    "Platform/Auth0.md",
+    "Platform/Mobile.md",
+    "Platform/macOS.md",
     "Cheatsheet/CSS.md",
-    "Cheatsheet/Typescript.md",
-    "Cheatsheet/Javascript.md",
-    "Cheatsheet/C#.md",
+    "Cheatsheet/Bitbucket.md",
+    "README.md",
     "Cheatsheet/Vim.md",
-    "Cheatsheet/Docker.md",
-    "Cheatsheet/Git.md",
-    "Platform/Google Cloud Platform.md"
+    "Cheatsheet/Web.md",
+    "Platform/Apple.md",
+    "Apple.md",
+    "Cheatsheet/macOS.md"
   ]
 }
